--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 .container {
     text-align: center;
     width: 200px;
-    height: 350px;
-    border: 1px solid black;
+    height: 400px;
+    border: 1px solid #b5b5b5;
     padding: 10px;
     margin: 10px;
     border-radius: 5px;
@@ -19,7 +19,17 @@ body {
 
 button {
     margin: 5px;
-    background-color: #ADD8E6;
-    border-radius: 5px;
+    background-color: #2196F3;
+    border-color: #2196F3;
+    border:none;
+    border-radius: 3px;
     margin-top: 15px;
+    cursor: pointer;
+    transition: 0.3s;
+    color:white;
+    font-size: 15px;
+}
+
+button:hover {
+    background:#1976D2;
 }
